--- a/src/stylesheets/styles/colors.scss
+++ b/src/stylesheets/styles/colors.scss
@@ -7,5 +7,6 @@ $white: #ffffff;
 
 // background colors
 $bg-primary: #f5f5f6;
-$bg-secondry: #ffffff;
+$bg-secondry: #f5f3f1;
+$bg-tertiary: #556958;
 
