--- a/src/stylesheets/styles/colors.scss
+++ b/src/stylesheets/styles/colors.scss
@@ -4,9 +4,22 @@ $secondary: #727585;
 $silver: #dddee2;
 $almostWhite: #f5f5f6;
 $white: #ffffff;
+$lightPink: #fceee2;
+$pink: #e79b91;
+$green: #7bc58f;
+$darkGreen: #556958;
 
 // background colors
 $bg-primary: #f5f5f6;
-$bg-secondry: #f5f3f1;
+$bg-secondary: #f5f3f1;
 $bg-tertiary: #556958;
+$bg-pink: #fceee2;
+
+// button colors 
+$btn-pink: #e79b91;
+$btn-pink-hover: #c5857d;
+$btn-green: #7bc58f;
+$btn-green-hover: #609b6f;
+$btn-darkGreen: #556958;
+$btn-darkGreen-hover: #3b493d;
 
