--- a/src/stylesheets/styles/fonts.scss
+++ b/src/stylesheets/styles/fonts.scss
@@ -3,3 +3,31 @@ $normal: 400;
 $bold: 700;
 $extraBold: 800;
 $thin: 200;
+
+// font sizes
+$btn: 1rem;
+
+h1 {
+  font-size: 4rem;
+}
+  
+h2 {
+  font-size: 2.5rem;
+}
+  
+h3 {
+  font-size: 1.8rem;
+  font-weight: $bold;
+}
+  
+h4 {
+  font-size: 1.2rem;
+}
+  
+h6 {
+  font-weight: $bold;
+}
+  
+h6, p {
+  font-size: 1rem;
+}
