--- a/src/stylesheets/styles/fonts.scss
+++ b/src/stylesheets/styles/fonts.scss
@@ -6,6 +6,9 @@ $thin: 200;
 
 // font sizes
 $btn: 1rem;
+$navbar-link: 1.2rem;
+$sidebar-link: 1.2rem;
+$sidebar-sublink: 0.8rem;
 
 h1 {
   font-size: 4rem;
