--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -4,6 +4,8 @@
 @import './styles/buttons.scss';
 @import './styles/navigation.scss';
 
+$wrap-padding: 10%;
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -22,7 +24,7 @@ body {
 }
 
 .container-fluid {
-  padding: 40px !important;
+  padding: $wrap-padding !important;
 }
 
 .content-wrap {
@@ -44,6 +46,26 @@ img {
 
 li {
   cursor: pointer;
+}
+
+//header
+.header {
+  height: 600px;
+  position: relative;
+
+  .content {
+    max-width: 500px;
+    z-index: 2;
+  }
+
+  .image {
+    position: absolute;
+    width: 65%;
+    max-width: 750px;
+    min-width: 400px;
+    right: $wrap-padding;
+    bottom: $wrap-padding;
+  }
 }
 
 // intro
@@ -74,7 +96,6 @@ li {
   }
 
 }
-
 
 // footer 
 .footer {
