--- a/src/stylesheets/styles/colors.scss
+++ b/src/stylesheets/styles/colors.scss
@@ -9,6 +9,9 @@ $pink: #e79b91;
 $green: #7bc58f;
 $darkGreen: #556958;
 
+// hover
+$darkGreen-hover: #3b493d;
+
 // background colors
 $bg-primary: #f5f5f6;
 $bg-secondary: #f5f3f1;
