--- a/src/stylesheets/styles/fonts.scss
+++ b/src/stylesheets/styles/fonts.scss
@@ -6,12 +6,14 @@ $thin: 200;
 
 // font sizes
 $btn: 1rem;
-$navbar-link: 1.2rem;
+$btn-small: 0.9rem;
+$navbar-link: 1rem;
 $sidebar-link: 1.2rem;
 $sidebar-sublink: 0.8rem;
 
 h1 {
-  font-size: 4rem;
+  font-size: 3rem;
+  font-weight: $bold;
 }
   
 h2 {
