--- a/src/stylesheets/styles/navigation.scss
+++ b/src/stylesheets/styles/navigation.scss
@@ -8,7 +8,23 @@
     font-weight: fonts.$bold;
     margin-right: 40px;
     display: inline-block;
+    color: colors.$darkGreen;
+
+    &:hover {
+      color: colors.$darkGreen-hover;
+    }
   }
+
+  .extra-links {
+    display: inline-block;
+  }
+
+  @media screen and (max-width: 768px) {
+    .extra-links {
+      display: none;
+    }
+  }
+
 }
 
 .sidebar-btn {
