--- a/src/stylesheets/styles/fonts.scss
+++ b/src/stylesheets/styles/fonts.scss
@@ -5,8 +5,10 @@ $extraBold: 800;
 $thin: 200;
 
 // font sizes
+$sm: 0.8rem;
+
 $btn: 1rem;
-$btn-small: 0.9rem;
+$btn-sm: 0.9rem;
 $navbar-link: 1rem;
 $sidebar-link: 1.2rem;
 $sidebar-sublink: 0.8rem;
@@ -26,7 +28,7 @@ h3 {
 }
   
 h4 {
-  font-size: 1.2rem;
+  font-size: 1.6rem;
 }
   
 h6 {
