--- a/src/stylesheets/styles/colors.scss
+++ b/src/stylesheets/styles/colors.scss
@@ -3,11 +3,13 @@ $primary: #2b2c3d;
 $secondary: #727585;
 $silver: #dddee2;
 $almostWhite: #f5f5f6;
+$almostWhite-opacity: #f5f5f6cc;
 $white: #ffffff;
 $lightPink: #fceee2;
 $pink: #e79b91;
 $green: #7bc58f;
 $darkGreen: #556958;
+$darkGreen-opacity: #556958c0;
 
 // hover
 $darkGreen-hover: #3b493d;
