--- a/src/stylesheets/styles/colors.scss
+++ b/src/stylesheets/styles/colors.scss
@@ -1,14 +1,14 @@
 // font colors
-$primary: #2b2c3d;
-$secondary: #727585;
-$silver: #dddee2;
+$primary: #2b472f;
+$secondary: #202220;
+$silver: #b9b9b9;
 $almostWhite: #f5f5f6;
 $almostWhite-opacity: #f5f5f6cc;
 $white: #ffffff;
 $lightPink: #fceee2;
-$pink: #e79b91;
-$green: #7bc58f;
-$darkGreen: #556958;
+$pink: #ec7265;
+$green: #55be71;
+$darkGreen: #3f6344;
 $darkGreen-opacity: #556958c0;
 
 // hover
@@ -21,10 +21,10 @@ $bg-tertiary: #556958;
 $bg-pink: #fceee2;
 
 // button colors 
-$btn-pink: #e79b91;
-$btn-pink-hover: #c5857d;
-$btn-green: #7bc58f;
-$btn-green-hover: #609b6f;
-$btn-darkGreen: #556958;
-$btn-darkGreen-hover: #3b493d;
+$btn-pink: #ec9085;
+$btn-pink-hover: #e48073;
+$btn-green: #55be71;
+$btn-green-hover: #43ac5f;
+$btn-darkGreen: #3f6344;
+$btn-darkGreen-hover: #2e5233;
 
