--- a/src/stylesheets/styles/buttons.scss
+++ b/src/stylesheets/styles/buttons.scss
@@ -1,5 +1,6 @@
 @use './colors.scss';
 @use './fonts.scss';
+@use './spaces.scss';
 
 button {
   border-radius: 50px;
@@ -9,15 +10,39 @@ button {
   font-weight: fonts.$bold;
   cursor: pointer;
 
+  &.disabled{
+    padding: 20px 20px; 
+  }
+
+  &.input-btn {
+    background-color: transparent;
+    border: 2px solid colors.$silver;
+    color: colors.$silver;
+    padding: 20px 30px;
+
+  &.is-active {
+    border: 2px solid colors.$darkGreen;
+    color: colors.$darkGreen;
+  }
+
+    &:hover {
+      border: 2px solid colors.$darkGreen;
+      color: colors.$darkGreen;
+    }
+  }
+
   &.primary {
+    transition: all .2s ease-in-out;
     background-color: colors.$btn-pink;
   }
     
   &.secondary {
+    transition: all .2s ease-in-out;
     background-color: colors.$btn-darkGreen;
   }
 
   &.tertiary {
+    transition: all .2s ease-in-out;
     background-color: colors.$btn-green;
   }
     
@@ -44,6 +69,10 @@ button {
     width: 40px;
     margin: 0;
     position: relative !important;
+
+    &.disabled{
+      display: none;
+    }
   }
 
   label {
@@ -57,14 +86,17 @@ button {
 
 button:hover {
   &.primary {
+    transition: all .2s ease-in-out;
     background-color: colors.$btn-pink-hover;
   }
     
   &.secondary {
+    transition: all .2s ease-in-out;
     background-color: colors.$btn-darkGreen-hover;
   }
     
   &.tertiary {
+    transition: all .2s ease-in-out;
     background-color: colors.$btn-green-hover;
   }
 }
