--- a/src/stylesheets/styles/fonts.scss
+++ b/src/stylesheets/styles/fonts.scss
@@ -13,6 +13,8 @@ $navbar-link: 1rem;
 $sidebar-link: 1.2rem;
 $sidebar-sublink: 0.8rem;
 
+$paragraph: 1rem;
+
 h1 {
   font-size: 3rem;
   font-weight: $bold;
@@ -30,11 +32,15 @@ h3 {
 h4 {
   font-size: 1.6rem;
 }
+
+h5 {
+  font-size: 1.2rem;
+}
   
 h6 {
   font-weight: $bold;
 }
   
 h6, p {
-  font-size: 1rem;
+  font-size: $paragraph;
 }
