--- a/src/stylesheets/styles/colors.scss
+++ b/src/stylesheets/styles/colors.scss
@@ -1,30 +1,31 @@
 // font colors
 $primary: #2b472f;
 $secondary: #202220;
-$silver: #b9b9b9;
-$almostWhite: #f5f5f6;
+$silver: #a7a7a7;
+$almostWhite: #ffffff;
 $almostWhite-opacity: #f5f5f6cc;
-$white: #ffffff;
 $lightPink: #fceee2;
-$pink: #ec7265;
-$green: #55be71;
+$pink: #eb6e60;
+$green: #3fa65b;
 $darkGreen: #3f6344;
+$darkGreen-darker: #314234;
+
+//opacity
 $darkGreen-opacity: #556958c0;
 
 // hover
 $darkGreen-hover: #3b493d;
 
 // background colors
-$bg-primary: #f5f5f6;
+$bg-primary: #ffffff;
 $bg-secondary: #f5f5f1;
-$bg-tertiary: #556958;
+$bg-tertiary: #3f6344;
 $bg-pink: #fceee2;
 
-// button colors 
-$btn-pink: #ec9085;
-$btn-pink-hover: #e48073;
-$btn-green: #55be71;
-$btn-green-hover: #43ac5f;
+// button colors
+$btn-pink: #eb6e60;
+$btn-pink-hover: #cf5c4f;
+$btn-green: #2faa50;
+$btn-green-hover: rgb(55, 155, 82);
 $btn-darkGreen: #3f6344;
 $btn-darkGreen-hover: #2e5233;
-
